refactor: IntelliJ code inspection